Use rocksdb column families